--- a/splade-encoder-api/pyproject.toml
+++ b/splade-encoder-api/pyproject.toml
@@ -18,7 +18,7 @@ dependencies = [
 ]
 
 [tool.pytest.ini_options]
-pythonpath = ["src"]
+pythonpath = ["api"]
 testpaths = ["tests"]
 
 [dependency-groups]
