--- a/ingestion-batch/pyproject.toml
+++ b/ingestion-batch/pyproject.toml
@@ -5,7 +5,7 @@ description = "Scrapbox to Elasticsearch ingestion batch"
 requires-python = ">=3.11"
 dependencies = [
     "requests",
-    "elasticsearch>=8.0.0",
+    "elasticsearch>=8.0.0,<9.0.0",
     "pydantic",
     "pydantic-settings",
     "loguru",
