--- a/compose.yml
+++ b/compose.yml
@@ -1,3 +1,9 @@
 include:
   - path: elasticsearch/compose.yml
   - path: splade-encoder-api/compose.yml
+  - path: search-api/compose.yml
+
+networks:
+  rag-net:
+    name: rag-net
+    driver: bridge
