linter for search api

--- a/search-api/Dockerfile
+++ b/search-api/Dockerfile
@@ -3,7 +3,7 @@ FROM python:3.11-slim
 WORKDIR /app
 
 COPY pyproject.toml .
-RUN pip install --no-cache-dir fastapi uvicorn "elasticsearch>=8.0.0,<9.0.0" aiohttp httpx google-genai pydantic-settings loguru
+RUN pip install --no-cache-dir .
 
 COPY api/ ./api/
 
