--- a/compose.yml
+++ b/compose.yml
@@ -2,6 +2,7 @@ include:
   - path: elasticsearch/compose.yml
   - path: splade-encoder-api/compose.yml
   - path: search-api/compose.yml
+  - path: web-ui/compose.yml
 
 networks:
   rag-net:
