--- a/search-api/pyproject.toml
+++ b/search-api/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "google-genai>=0.1.0",
     "pydantic-settings>=2.0.0",
     "loguru>=0.7.0",
+    "tenacity>=8.0.0",
 ]
 
 [dependency-groups]
